NOJIRA: Fixed UI word wrapping issue

--- a/src/Modules/Manage/Dnn.PersonaBar.AdminLogs/AdminLogs.Web/src/components/AdminLog/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.AdminLogs/AdminLogs.Web/src/components/AdminLog/style.less
@@ -173,7 +173,6 @@
                     }
                 }
                 .toolbar-button {
-                    margin: 10px 0 5px 20px;
                     float: right;
                     border-left: solid 1px @alto;
                     padding-left: 20px;
